--- a/main.html
+++ b/main.html
@@ -127,6 +127,12 @@
                 <span><i class="fa-solid fa-heart" style="color: #868c98;"></i>167</span>
                 <span><i class="fa-solid fa-eye" style="color: #868c98;"></i>5.6k</span>
             </div>
+            <div class="box">
+                <img src="./media/original-6aaa02a1f19b1c15afb01c7034823642.webp" alt="">
+                <blockquote>Brand Crown</blockquote>
+                <span><i class="fa-solid fa-heart" style="color: #868c98;"></i>167</span>
+                <span><i class="fa-solid fa-eye" style="color: #868c98;"></i>5.6k</span>
+            </div>
         </div>
     </body>
 </body>
